--- a/basket.html
+++ b/basket.html
@@ -19,7 +19,7 @@
 		<section id="basket">
         </section>
         <section>
-            <form action="​http://localhost:3000/api/cameras/order" method="POST">
+            <form name="orderForm">
                 <div>
                     <label for="firstName">Prénom</label>
                     <input type="text" name="firstName" id="firstName" required aria-required="true">
@@ -29,8 +29,8 @@
                     <input type="text" name="lastName" id="lastName" required aria-required="true">
                 </div>
                 <div>
-                    <label for="adress">Adresse</label>
-                    <input type="text" name="adress" id="adress" required aria-required="true">
+                    <label for="address">Adresse</label>
+                    <input type="text" name="address" id="address" required aria-required="true">
                 </div>
                 <div>
                     <label for="city">Ville</label>
