--- a/product.html
+++ b/product.html
@@ -24,8 +24,8 @@
 					<p id="p2"></p>
 					<label for="lense">Dimension lentilles : </label>
 					<select name="lense_choice" id="lense"></select>
-					<label for="quantity">Quantité : </label>
-					<input type="number" name="quantity_choice" id="quantity" value="1" min="1">
+					<!--<label for="quantity">Quantité : </label>
+					<input type="number" name="quantity_choice" id="quantity" value="1" min="1">-->
 					<button type="submit">Ajouter au panier</button>
 				</figcaption>
 			</figure>
