--- a/lastPage.html
+++ b/lastPage.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://kit.fontawesome.com/199083e587.js" crossorigin="anonymous"></script>
-		<script src="firstPage.js"></script>
+		<script src="lastPage.js"></script>
 		<link rel="stylesheet" href="style.css"/>
 		<title>Orinoco</title>
 	</head>
@@ -15,8 +15,7 @@
 			</h1>
 			<a href="basket.html"><i class="fas fa-shopping-basket"></i></a>
 		</header>
-		<section id="section"></section>
+		<section></section>
 		<footer></footer>
 	</body>
 </html>
-
