--- a/basket.html
+++ b/basket.html
@@ -5,15 +5,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://kit.fontawesome.com/199083e587.js" crossorigin="anonymous"></script>
         <script src="basket.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css"/>
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 		<title></title>
 	</head>
 	<body>
-		<header>
-			<h1>
-				<a href="index.html">Orinoco</a>
-			</h1>
-			<a href="basket.html"><i class="fas fa-shopping-basket"></i></a>
+		<header class="navbar navbar-expand bg-dark navbar-dark justify-content-between px-md-5">
+			<a href="index.html" class="navbar-brand">Orinoco</a>
+            <nav class="navbar-nav">
+                <div class="nav-item active">
+                    <a href="basket.html"  class="nav-link"><i class="fas fa-shopping-basket"></i></a>
+                </div>
+            </nav>
 		</header>
 		<section id="basket">
         </section>
@@ -21,11 +28,11 @@
             <form name="orderForm">
                 <div>
                     <label for="firstName">Prénom</label>
-                    <input type="text" name="firstName" id="firstName" required aria-required="true" pattern="[A-Z][a-z]{1,}">
+                    <input class="text-capitalize" type="text" name="firstName" id="firstName" required aria-required="true" pattern="[A-Z][a-z]{1,}">
                 </div>
                 <div>
                     <label for="lastName">Nom</label>
-                    <input type="text" name="lastName" id="lastName" required aria-required="true" pattern="[A-Z,a-z]{1,}">
+                    <input class="text-capitalize" type="text" name="lastName" id="lastName" required aria-required="true" pattern="[A-Z,a-z]{1,}">
                 </div>
                 <div>
                     <label for="address">Adresse</label>
@@ -33,7 +40,7 @@
                 </div>
                 <div>
                     <label for="city">Ville</label>
-                    <input type="text" name="city" id="city" required aria-required="true" pattern="[A-Z,a-z,-]{2,}">
+                    <input class="text-capitalize" type="text" name="city" id="city" required aria-required="true" pattern="[A-Z,a-z,-]{2,}">
                 </div>
                 <div>
                     <label for="email">Email</label>
