--- a/lastPage.html
+++ b/lastPage.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://kit.fontawesome.com/199083e587.js" crossorigin="anonymous"></script>
-        <script src="lastPage.js" async></script>
+        <script src="lastPage.js" defer></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css"/>
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -22,8 +22,8 @@
                 </div>
             </nav>
 		</header>
-		<section>
-            <p id="text"></p>
+		<section class="container">
+            <p id="text" class="text-center mt-5"></p>
         </section>
 		<footer></footer>
 	</body>
